2008-03-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: Removed debug message.

2008-03-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/LineSegmentTree.cs: fixed Bug 372273 - MD crash.

2008-03-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: Fixed 'Bug 372256 - Region wrapped when
	  Code Folding is disabled'

2008-03-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Removed some debug messages.

2008-03-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Fixed Bug 371702
	  - XmlEditor - crash with empty file.

2008-03-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, CSharpSyntaxMode.xml, CSyntaxMode.xml,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/Rule.cs, Makefile.am: Fixed Bug 370303
	  - '#if 0' blocks should be coloured as comments.
	
	  Changed the way spans are scanned. The order of the span definition
	  is now important - no more constraints. The first defined span is
	  used first - so define /// before // for example.

2008-03-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed Bug 363951 - Numeric keyboard
	  does not work

2008-03-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Possible fix: 'Bug 368597 - Wrong
	  location of caret in the new managed editor'.

2008-03-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed Bug 370133 - When jumping to a
	  line, caret should be placed in the middle of the window

2008-03-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed Bug 370135
	  - XML comment highlighting not working

2008-03-13  Mike Krüger <mkrueger@novell.com> 
