@@ -76,6 +76,7 @@
     <File name="PythonSyntaxMode.xml" subtype="Code" buildaction="EmbedAsResource" />
     <File name="AspNetSyntaxMode.xml" subtype="Code" buildaction="EmbedAsResource" />
     <File name="ValaSyntaxMode.xml" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="Mono.TextEditor/CodeSegmentPreviewWindow.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
